# awesome-fastapi-project

./: .gitignore  README.md  aerich.ini  logging.ini  poetry.py  pyproject.toml
awesome_fastapi_project/: config.py  exceptions.py  logging.py  main.py
awesome_fastapi_project/posts/: models.py
awesome_fastapi_project/user/: authentication.py  authorization.py  models.py  routers.py
migrations/models/: 0_20230802195811_init.py  1_20230802193847_update.py  1_20230804170922_update.py
tests/: test_main.py  test_user.py
